tests/baselines/reference/missingCloseParenStatements(strict=true).errors.txt
missingCloseParenStatements.ts(2,13): error TS18048: 'a2' is possibly 'undefined'.
missingCloseParenStatements.ts(2,26): error TS1005: ')' expected.
missingCloseParenStatements.ts(3,13): error TS18048: 'a2' is possibly 'undefined'.
missingCloseParenStatements.ts(4,5): error TS1005: ')' expected.
missingCloseParenStatements.ts(6,17): error TS7022: 'i' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
missingCloseParenStatements.ts(8,13): error TS1101: 'with' statements are not allowed in strict mode.
missingCloseParenStatements.ts(8,20): error TS18048: 'a2' is possibly 'undefined'.
missingCloseParenStatements.ts(8,39): error TS1005: ')' expected.
missingCloseParenStatements.ts(11,28): error TS2365: Operator '>' cannot be applied to types 'string' and 'number'.
missingCloseParenStatements.ts(11,35): error TS1005: ')' expected.


==== missingCloseParenStatements.ts (10 errors) ====
    var a1, a2, a3 = 0;
    if ( a1 && (a2 + a3 > 0) {
                ~~
!!! error TS18048: 'a2' is possibly 'undefined'.
                             ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:2:4: The parser expected to find a ')' to match the '(' token here.
        while( (a2 > 0) && a1
                ~~
!!! error TS18048: 'a2' is possibly 'undefined'.
        {
        ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:3:10: The parser expected to find a ')' to match the '(' token here.
            do {
                var i = i + 1;
                    ~
!!! error TS7022: 'i' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                a1 = a1 + i;
                with ((a2 + a3 > 0) && a1 {
                ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
                       ~~
!!! error TS18048: 'a2' is possibly 'undefined'.
                                          ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:8:18: The parser expected to find a ')' to match the '(' token here.
                    console.log(x);
                  }
            } while (i < 5 && (a1 > 5);
                               ~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'string' and 'number'.
                                      ~
!!! error TS1005: ')' expected.
!!! related TS1007 missingCloseParenStatements.ts:11:17: The parser expected to find a ')' to match the '(' token here.
        }
    }